<resources>
    <string name="app_name">One Moment</string>
    <string name="appVersion" translatable="false">1.3.7</string>
    <string-array name="jazzy_effects" translatable="false">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="fragmentRecordShootBtnString">Shoot</string>
    <string name="recordConvertingHint">Converting video…</string>
    <string name="recordLoadCameraError">Loading camera failed, cannot record.</string>
    <string name="recordConvertError">Convert failed!</string>
    <string name="loginDialogTitle">Login</string>
    <string name="loginDialogByWeibo">Login By Sina Weibo</string>
    <string name="loginDialogInstruction">to enable sync feature</string>
    <string name="loginDialogEntryByPhone">Login By Phone</string>
    <string name="loginByPhoneTitle">Login by phone</string>
    <string name="loginTitle">Login</string>
    <string name="loginPhoneHint">Phone number</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginSignInBtnString">Login</string>
    <string name="loginForgetBtnString">Forgotten? To find here ></string>
    <string name="loginLoginFailNetwork">Login failed! Please check your network.</string>
    <string name="loginLoginFailAccountNotExist">"Account doesn't exist!"</string>
    <string name="loginLoginFailPasswordError">Your account or password is wrong.</string>
    <string name="loginLoginFail">Login failed!</string>
    <string name="loginLoginSuccess">Login success</string>
    <string name="action_identity">Identity</string>
    <string name="action_sync_settings">Sync Settings</string>
    <string name="action_notification_settings">Enable Notification</string>
    <string name="action_suggest">Suggestion</string>
    <string name="action_rate">Rate it!</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="calenderTextCalenderTileNum1">The&#160;</string>
    <string name="calenderTextCalenderTileNum2">&#160;Moment</string>
    <string name="albumTitle">Today</string>
    <string name="albumShotBtnText">Shoot</string>
    <string name="albumReplayBtnText">Replay</string>
    <string name="albumReplayNoMoment">No moment at all!</string>
    <string name="albumSyncBtnText">Sync</string>
    <string name="albumSyncText">Sync…</string>
    <string name="albumSyncAlertText">Not connected wifi, sync anyway?</string>
    <string name="albumSyncAlertOk">Sync</string>
    <string name="albumSyncDoneSuccess">Sync finish.</string>
    <string name="albumWeekTitleSun">Sun</string>
    <string name="albumWeekTitleMon">Mon</string>
    <string name="albumWeekTitleTue">Tue</string>
    <string name="albumWeekTitleWed">Wed</string>
    <string name="albumWeekTitleThu">Thu</string>
    <string name="albumWeekTitleFri">Fri</string>
    <string name="albumWeekTitleSat">Sat</string>
    <string name="albumMonthTitle">月份</string>
    <string name="aboutTitle">About</string>
    <string name="aboutVersion">Version&#160;</string>
    <string name="aboutCheckNew">Check new version</string>
    <string name="aboutRecommend">Recommend to friends</string>
    <string name="aboutUpdated">Has been updated!</string>
    <string name="aboutChecking">Checking…</string>
    <string name="aboutRecommendContent">"Hi! I'm use One Moment to record my life, have a try? http://www.yishun.co"
    </string>
    <string name="findPasswordTitle">Find Password</string>
    <string name="findPasswordPhoneHint">Phone number</string>
    <string name="findPasswordVerificationHint">Verification code</string>
    <string name="findPasswordGetVerificationCodeBtn">Get Verification Code</string>
    <string name="findPasswordNextBtn">Next</string>
    <string name="resetPasswordTitle">Reset Password</string>
    <string name="resetPasswordPasswordHint">Password</string>
    <string name="resetPasswordPasswordAgainHint">Again</string>
    <string name="resetPasswordOkBtn">OK</string>
    <string name="resetPasswordPasswordInvalid">Your password is invalid.</string>
    <string name="resetPasswordPasswordAgainInvalid">The passwords you entered must be the same.</string>
    <string name="resetPasswordSaveFail">Save password failed!</string>
    <string name="resetPasswordSaveFailFormat">Password Format Invalid!</string>
    <string name="resetPasswordSaveSuccess">Save password Success.</string>
    <string name="identityInfoTitle">Identity Info</string>
    <string name="identityInfoProfile">Profile</string>
    <string name="identityInfoName">Nickname</string>
    <string name="identityInfoWeibo">Sina Weibo</string>
    <string name="identityInfoGender">Gender</string>
    <string name="identityInfoArea">Area</string>
    <string name="identityInfoLogout">Log Out</string>
    <string name="identityInfoOk">OK</string>
    <string name="identityInfoCancel">Cancel</string>
    <string name="identityInfoUpdateSuccess">Update Success.</string>
    <string name="identityInfoUpdateFail">Update Failed!</string>
    <string name="identityInfoNicknameInvalid">nickname length must at 4~30!</string>
    <string name="identityInfoNicknameNetworkInvalid">nickname format error!</string>
    <string name="identityInfoNicknameExist">nickname already exists!</string>
    <string name="identityInfoLogoutAlert">Are you sure you want to logout?</string>
    <string name="identityInfoWeiboBound">Bound</string>
    <string name="identityInfoWeiboUnbound">Unbound</string>
    <string name="identityInfoWeiboUnboundDialogTitle">Unbound</string>
    <string name="identityInfoWeiboUnboundDialogContent">Are you sure you want to unbound with Sina weibo?</string>
    <string name="identityInfoWeiboUnboundImpossible">Your account is weibo account, unable to unbind.</string>
    <string name="identityInfoWeiboUnboundSuccess">Unbind success</string>
    <string name="identityInfoWeiboUnboundFail">Unbind failed</string>
    <string name="identityInfoWeiboBoundSuccess">Bind success</string>
    <string name="identityInfoWeiboBoundFail">Bound failed</string>
    <string name="identityInfoSelectProfileFail">read image file failed.</string>
    <string name="weiboBindAuthSuccess">Auth Success, now update info…</string>
    <string name="weiboBindSuccess">Bind Success</string>
    <string name="weiboBindFail">Bind Failed</string>
    <string name="weiboBindCancel">Bind Cancel</string>
    <string name="videoSaveTitle">@string/app_name</string>
    <string name="recordEndSave">save</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="signUpPhone">Phone Number</string>
    <string name="signUpVerificationCode">Verification Code</string>
    <string name="signUpGetVerificationCode">Get Verification Code</string>
    <string name="signUpNextBtn">Next</string>
    <string name="signUpLoginEntry">Already has an account? Sign in ></string>
    <string name="signUpPhoneInvalidToast">Your phone number is invalid</string>
    <string name="signUpVerificationCodeInvalidToast">Your phone verification code is invalid</string>
    <string name="signUpVerificationCodeSuccessToast">Verification code has been sent, please check</string>
    <string name="signUpVerificationCodeFailedToast">Verification code sent failed, please retry</string>
    <string name="signUpLoading">Please waiting…</string>
    <string name="signUpVerifySuccess">Verify Success!</string>
    <string name="signUpVerifyFail">Verify Failed! Please check your network</string>
    <string name="signUpVerificationRemainTimePrefix">Resend&#160;</string>
    <string name="signUpVerificationRemainTimeSuffix">&#160;seconds later</string>
    <string name="setPasswordTitle">Set Password</string>
    <string name="setPasswordPasswordHint">Password</string>
    <string name="setPasswordPasswordAgainHint">Again</string>
    <string name="setPasswordNextBtn">Next</string>
    <string name="setPasswordPasswordInvalid">Your password is invalid.</string>
    <string name="setPasswordPasswordAgainInvalid">The passwords you entered must be the same.</string>
    <string name="setPasswordSignUpFail">Register failed!</string>
    <string name="setPasswordSignUpSuccess">Register Success.</string>
    <string name="setPasswordSignUpAccountExist">Account already exists!</string>
    <string name="integrateInfoTitle">Integrate Information</string>
    <string name="integrateInfoNickNameHint">Your Name</string>
    <string name="integrateInfoAreaHint">Area</string>
    <string name="integrateInfoGenderHint">Gender</string>
    <string name="integrateInfoFinishBtn">OK</string>
    <string name="integrateInfoNameEmpty">Please set your nickname.</string>
    <string name="integrateInfoNameNotUnique">This nickname has been used.</string>
    <string name="integrateInfoGenderPrivate">Private</string>
    <string-array name="integrateInfoGenderArray">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="integrateInfoChooseBtn">CHOOSE</string>
    <string name="integrateInfoUpdateSuccess">Update Info Success.</string>
    <string name="integrateInfoUpdateFail">Update Info Failed!</string>
    <string name="integrateInfoGetWeiboInfo">Getting your info on weibo</string>
    <string name="integrateInfoGetWeiboInfoFail">Get weibo info failed.</string>
    <string name="integrateInfoGetWeiboInfoSuccess">Get weibo info success.</string>
    <string name="weiboLoginAuthSuccess">Auth Success, now login…</string>
    <string name="weiboLoginNetworkError">Network Error</string>
    <string name="weiboLoginNeedSignUp">Please integrate your identity information</string>
    <string name="weiboLoginSuccess">Login Success</string>
    <string name="weiboLoginFail">Login Failed</string>
    <string name="weiboLoginCancel">Login Cancel</string>
    <string name="weiboLoginSignUpSuccess">Sign Up Success</string>
    <string name="weiboLoginSignUpFail">Sign Up Failed</string>
    <string name="dayOfWeekSun">Sunday</string>
    <string name="dayOfWeekMon">Monday</string>
    <string name="dayOfWeekTue">Tuesday</string>
    <string name="dayOfWeekWed">Wednesday</string>
    <string name="dayOfWeekThu">Thursday</string>
    <string name="dayOfWeekFri">Friday</string>
    <string name="dayOfWeekSat">Saturday</string>
    <string name="guideTitle">Help</string>
    <string name="guideBtnText">Start</string>
    <string name="syncSettingsTitle">Sync Settings</string>
    <string name="syncSettingsSyncAuto">Auto Sync</string>
    <string name="syncSettingsSyncWifi">Over wifi only</string>
    <string name="syncSettingsSyncNow">Sync Now</string>
    <string name="syncSettingsSyncNowToast">Syncing…</string>
    <string name="playTitle">@string/app_name</string>
    <string name="playRepairing">video is damaged, try repairing</string>
    <string name="playRepairingFailed">Fail to repairing</string>
    <string name="multiPlayTitle">@string/app_name</string>
    <string name="multiPlayError">Error occurs, please retry.</string>
    <string name="multiPlayShareBtn">Share</string>
    <string name="multiPlayShareText">One Moment.Every life is a movie, this is my life, how is yours?</string>
    <string name="multiPlayShareLoginAlert">Sorry, you must login first!</string>
    <string name="multiPlayShareFail">Upload video failed, unable to share.</string>
    <string name="feedbackSubject">Feedback: OneMoment</string>
    <string name="feedbackContent">Please write feedback for us, we will reply soon:</string>
    <string name="feedbackFailNotification">You need to install an Email app to feedback.</string>
</resources>