<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
        >

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bgColorLoginToolbar"
            >

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_below="@id/toolbar"
            >

        <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="phone"
                android:hint="@string/signUpPhone"
                />

        <EditText
                android:id="@+id/verificationCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="number"
                android:hint="@string/signUpVerificationCode"
                />

        <Button
                android:id="@+id/getVerificationCodeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/signUpGetVerificationCode"
                android:textColor="@color/bgColorGetVerificationCodeBtn"
                android:background="@drawable/bg_square_greenblue_btn"
                android:layout_marginTop="16dp"
                />

        <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/signUpNextBtn"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_orange_btn"
                />


    </LinearLayout>

    <Button
            android:id="@+id/loginEntryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_alignParentBottom="true"
            android:text="@string/signUpLoginEntry"
            android:background="?android:selectableItemBackground"
            />
</RelativeLayout>