<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bgColorLoginToolbar"
            >

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_below="@id/toolbar"
            >

        <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="phone"
                android:hint="@string/loginPhoneHint"
                />

        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:hint="@string/loginPasswordHint"
                />

        <!--<Button-->
        <!--android:id="@+id/verificationBtn"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:minHeight="56dp"-->
        <!--android:text="@string/loginVerificationBtnString"-->
        <!--/>-->

        <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/loginSignInBtnString"
                android:background="@drawable/bg_greenblue_btn"
                />


    </LinearLayout>

    <Button
            android:id="@+id/findPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_alignParentBottom="true"
            android:text="@string/loginForgetBtnString"
            android:background="@drawable/abc_item_background_holo_light"
            />
</RelativeLayout>