<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_gravity="center"
        >


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginDialogTitle"
            android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
            android:padding="16dp"
            android:layout_marginBottom="8dp"
            />

    <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rv_color="@color/bgColorNextBtnSelected"
            android:paddingLeft="32dp"
            android:layout_marginLeft="16dp"
            android:paddingRight="32dp"
            android:background="@color/bgColorNextBtn"
            android:layout_marginRight="16dp"
            app:rv_rippleDuration="100"
            app:rv_zoomDuration="100"
            >

        <Button
                android:id="@+id/loginByWeiboBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginDialogByWeibo"
                android:drawableLeft="@drawable/ic_weibo"
                android:drawablePadding="5dp"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_centerInParent="true"
                />
    </com.andexert.library.RippleView>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginDialogInstruction"
            android:padding="8dp"
            />

    <Button
            android:id="@+id/loginByPhoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:text="@string/loginDialogEntryByPhone"
            android:background="?android:selectableItemBackground"
            android:drawableRight="@drawable/ic_right"
            android:drawablePadding="16dp"
            />
</LinearLayout>
