<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bgColorLoginToolbar"
            />

    <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:hint="@string/setPasswordPasswordHint"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />

    <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:hint="@string/setPasswordPasswordAgainHint"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />

    <Button
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/resetPasswordOkBtn"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_orange_btn"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />

</LinearLayout>