<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:float="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="co.yishun.onemoment.app.ui.FindPasswordActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bgColorLoginToolbar"
            >

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/toolbar"
            >

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletTextAppearance="@style/FloatingTextHintStyle"
                >

            <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/findPasswordPhoneHint"
                    />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletTextAppearance="@style/FloatingTextHintStyle"
                >

            <EditText
                    android:id="@+id/verificationCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/findPasswordVerificationHint"
                    />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <!--<Button-->
        <!--android:id="@+id/verificationBtn"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:minHeight="56dp"-->
        <!--android:text="@string/loginVerificationBtnString"-->
        <!--/>-->

        <Button
                android:id="@+id/getVerificationCodeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/findPasswordGetVerificationCodeBtn"
                android:textColor="@color/bgColorGetVerificationCodeBtn"
                android:background="@drawable/bg_square_greenblue_btn"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                />

        <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/findPasswordNextBtn"
                android:background="@drawable/bg_orange_btn"
                android:layout_marginTop="8dp"
                />


    </LinearLayout>
</RelativeLayout>
