<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:float="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bgColorLoginToolbar"
            />

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletTextAppearance="@style/FloatingTextHintStyle"
            >

        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:hint="@string/setPasswordPasswordHint"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletTextAppearance="@style/FloatingTextHintStyle"
            >

        <EditText
                android:id="@+id/passwordAgainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:hint="@string/setPasswordPasswordAgainHint"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/signUpNextBtn"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_orange_btn"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />

</LinearLayout>