<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="co.yishun.onemoment.app.ui.AboutActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bgColorLoginToolbar"
            >
    </android.support.v7.widget.Toolbar>

    <ImageView
            android:id="@+id/aboutIcon"
            android:layout_below="@id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_shooting"
            android:layout_centerHorizontal="true"
            />

    <TextView
            android:id="@+id/aboutAppName"
            android:layout_below="@id/aboutIcon"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorLogoColor"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            />

    <TextView
            android:id="@+id/aboutVersion"
            android:layout_below="@id/aboutAppName"
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            />

    <Button
            android:id="@+id/checkNewBtn"
            android:layout_below="@id/aboutVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:minHeight="56dp"
            android:text="@string/aboutCheckNew"
            android:background="@drawable/bg_square_frame_unselected"
            />

    <Button
            android:id="@+id/recommendBtn"
            android:layout_below="@id/checkNewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:minHeight="56dp"
            android:text="@string/aboutRecommend"
            android:background="@drawable/bg_square_frame_unselected"
            />


</RelativeLayout>
